# ScriptSense

./: README.md
backend/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  scriptsense.db
backend/alembic/: env.py
backend/alembic/versions/: 20260318_000001_create_scripts_tables.py  20260319_000002_create_correction_records.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: __init__.py  config.py
backend/app/db/: init_db.py  session.py
backend/app/evaluation/: __init__.py  gold_loader.py  llm_fallback.py  metrics.py  parser_gold_loader.py  parser_metrics.py  parser_predictor.py  parser_runner.py  parser_types.py  predictor.py  runner.py  types.py
backend/app/repositories/: correction_repository.py  script_repository.py
backend/app/schemas/: correction.py  parse.py  script.py  semantic.py  validation.py
backend/evaluation_data/examples/: README.md
backend/evaluation_data/gold/: dr_maya_alias.json  kitchen_scene.json  office_ambiguity.json
backend/evaluation_data/output/: combined_report.json
backend/evaluation_data/parser_gold/: long_parenthetical_screenplay.json  mixed_case_screenplay.json  sample_screenplay_corrected.json
backend/evaluation_data/parser_output/: combined_report.json
backend/tests/: conftest.py  test_api.py  test_evaluation.py  test_parser.py  test_parser_evaluation.py  test_semantic.py  test_validation.py
backend/tests/fixtures/: continued_dialogue_screenplay.txt  numbered_scene_screenplay.txt  sample_screenplay.txt  voiceover_screenplay.txt
(+38 files in other folders)
